--- a/package.json
+++ b/package.json
@@ -9,17 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "xlsx": "^0.18.5",
-    "react": "^19.2.1",
-    "date-fns": "^4.1.0",
-    "react-dom": "^19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "lucide-react": "^0.561.0",
     "@google/genai": "^1.33.0",
-    "lucide-react": "^0.559.0",
+    "xlsx": "^0.18.5",
     "recharts": "^3.5.1",
-    "jspdf": "^3.0.4",
-    "jspdf-autotable": "^5.0.2",
-    "lunar-javascript": "1.6.13",
-    "@supabase/supabase-js": "2.39.7"
+    "date-fns": "^4.1.0",
+    "lunar-javascript": "^1.7.7",
+    "@supabase/supabase-js": "^2.87.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
