--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
+    "react": "18.3.1",
     "react-dom": "^19.2.3",
     "lucide-react": "0.344.0",
     "@google/genai": "0.1.1",
@@ -17,10 +17,7 @@
     "recharts": "2.12.3",
     "date-fns": "3.6.0",
     "lunar-javascript": "1.7.7",
-    "@supabase/supabase-js": "2.39.8",
-    "react-hook-form": "7.51.0",
-    "zod": "3.22.4",
-    "@hookform/resolvers": "^5.2.2"
+    "@supabase/supabase-js": "2.39.8"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
