--- a/package.json
+++ b/package.json
@@ -9,17 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.3.1",
+    "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "0.344.0",
-    "@google/genai": "0.1.1",
-    "xlsx": "0.18.5",
-    "recharts": "2.12.3",
-    "date-fns": "3.6.0",
-    "lunar-javascript": "1.7.7",
-    "@supabase/supabase-js": "2.39.8",
-    "react-hook-form": "7.51.0",
-    "zod": "3.22.4"
+    "lucide-react": "^0.561.0",
+    "@google/genai": "^1.33.0",
+    "xlsx": "^0.18.5",
+    "recharts": "^3.5.1",
+    "date-fns": "^4.1.0",
+    "lunar-javascript": "^1.7.7",
+    "@supabase/supabase-js": "^2.87.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
