--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.561.0",
-    "@google/genai": "^1.33.0",
-    "xlsx": "^0.18.5",
-    "recharts": "^3.5.1",
-    "date-fns": "^4.1.0",
-    "lunar-javascript": "^1.7.7",
-    "@supabase/supabase-js": "^2.87.1"
+    "lucide-react": "0.469.0",
+    "recharts": "2.15.0",
+    "@google/genai": "0.1.0",
+    "xlsx": "0.18.5",
+    "date-fns": "4.1.0",
+    "lunar-javascript": "1.7.7",
+    "@supabase/supabase-js": "2.47.10"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
