--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^19.2.3",
     "lucide-react": "0.469.0",
     "recharts": "2.15.0",
-    "@google/genai": "0.1.0",
+    "@google/genai": "latest",
     "xlsx": "0.18.5",
     "date-fns": "4.1.0",
     "lunar-javascript": "1.7.7",
