--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "xlsx": "0.18.5",
     "date-fns": "4.1.0",
     "lunar-javascript": "1.7.7",
-    "@supabase/supabase-js": "2.47.10"
+    "@supabase/supabase-js": "2.47.10",
+    "clsx": "2.1.0",
+    "tailwind-merge": "2.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
