Update Keep Supabase Alive.yml

--- a/.github/workflows/Keep Supabase Alive.yml
+++ b/.github/workflows/Keep Supabase Alive.yml
@@ -30,7 +30,7 @@ jobs:
 
           const supabase = createClient(
             process.env.SUPABASE_URL,
-            process.env.SUPABASE_KEY
+            process.env.SUPABASE_ANON_KEY
           );
 
           async function keepAlive() {
