--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "recharts": "2.15.0",
     "@google/genai": "latest",
     "xlsx": "0.18.5",
-    "date-fns": "4.1.0",
+    "date-fns": "^4.1.0",
     "lunar-javascript": "1.7.7",
     "@supabase/supabase-js": "2.47.10",
     "clsx": "2.1.0",
