--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "qltl_v2025",
+  "name": "iso-docmanager",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "check-expiry": "node scripts/check-expiry.js"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "0.469.0",
-    "recharts": "2.15.0",
-    "@google/genai": "latest",
-    "xlsx": "0.18.5",
+    "@supabase/supabase-js": "^2.47.10",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "lucide-react": "^0.469.0",
     "date-fns": "^4.1.0",
-    "lunar-javascript": "1.7.7",
-    "@supabase/supabase-js": "2.47.10",
-    "@emailjs/browser": "4.1.0",
-    "clsx": "2.1.0",
-    "tailwind-merge": "2.2.1"
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
