feat: Cải thiện hiển thị thông báo và xác thực người dùng
Cập nhật logic hiển thị thông báo hết hạn tài liệu, sửa lỗi sai lệch thời gian do timezone, và bổ sung tùy chọn tắt thông báo.

Đồng thời, thay thế event listener không cần thiết trong quá trình xác thực người dùng tại trang đăng nhập để tối ưu hiệu suất. Loại bỏ các script và cấu hình liên quan đến việc bảo trì database và gửi email tự động bằng cron job, do chức năng này đã được tích hợp vào quy trình xử lý trong ứng dụng.

--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "iso-docmanager",
   "version": "1.0.0",
@@ -6,8 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "check-expiry": "node scripts/check-expiry.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.47.10",
